--- a/sprint-one/styles/main.css
+++ b/sprint-one/styles/main.css
@@ -1,96 +1,199 @@
 @font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-UltLt.otf") format("opentype");
-  font-weight: 100;
-  font-style: normal;
+  font-family: "Avenir Next";
+  src: url("../assets/_Global-Font/AvenirNextProLT/Linotype-AvenirNextLTPro-Regular.otf") format("opentype");
 }
 @font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-UltLtIt.otf") format("opentype");
-  font-weight: 100;
-  font-style: italic;
-}
-@font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-Thin.otf") format("opentype");
-  font-weight: 200;
-  font-style: normal;
-}
-@font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-ThinIt.otf") format("opentype");
-  font-weight: 200;
-  font-style: italic;
-}
-@font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-Light.otf") format("opentype");
-  font-weight: 300;
-  font-style: normal;
-}
-@font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-LightIt.otf") format("opentype");
-  font-weight: 300;
-  font-style: italic;
-}
-@font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-Regular.otf") format("opentype");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-It.otf") format("opentype");
+  font-family: "Avenir Next";
+  src: url("../assets/_Global-Font/AvenirNextProLT/Linotype-AvenirNextLTPro-It.otf") format("opentype");
   font-weight: normal;
   font-style: italic;
 }
 @font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-Medium.otf") format("opentype");
-  font-weight: 500;
-  font-style: normal;
-}
-@font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-MediumIt.otf") format("opentype");
-  font-weight: 500;
-  font-style: italic;
-}
-@font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-Demi.otf) format('opentype'");
+  font-family: "Avenir Next";
+  src: url("../assets/_Global-Font/AvenirNextProLT/Linotype-AvenirNextLTPro-Demi.otf format('opentype'");
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-DemiIt.otf") format("opentype");
+  font-family: "Avenir Next";
+  src: url("../assets/_Global-Font/AvenirNextProLT/Linotype-AvenirNextLTPro-DemiIt.otf") format("opentype");
   font-weight: 600;
   font-style: italic;
 }
 @font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-Bold.otf") format("opentype");
+  font-family: "Avenir Next";
+  src: url("../assets/_Global-Font/AvenirNextProLT/Linotype-AvenirNextLTPro-Bold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-BoldIt.otf") format("opentype");
+  font-family: "Avenir Next";
+  src: url("../assets/_Global-Font/AvenirNextProLT/Linotype-AvenirNextLTPro-BoldIt.otf") format("opentype");
   font-weight: 700;
   font-style: italic;
 }
-@font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-Heavy.otf") format("opentype");
-  font-weight: 800;
-  font-style: normal;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-@font-face {
-  font-family: "AvenirNext";
-  src: url("../../assets/_Global-Font/AvenirNextProLT/Linotype - AvenirNextLTPro-HeavyIt.otf") format("opentype");
-  font-weight: 800;
-  font-style: italic;
+
+body {
+  font-family: "Avenir Next";
+  width: 100%;
+}
+
+.navbar {
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: #323232;
+  list-style: none;
+  text-align: center;
+}
+.navbar a {
+  text-decoration: none;
+  color: white;
+  font-size: 14px;
+}
+
+.navbar-logo {
+  margin: 16px 0;
+}
+
+.navbar-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.navbar-list__items {
+  width: 160px;
+  list-style: none;
+}
+
+.hero {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 183px;
+  width: 100%;
+  background-image: linear-gradient(rgba(51, 51, 51, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/Images/hero.jpg);
+  background-size: cover;
+  align-items: center;
+}
+.hero__title {
+  font-size: 24px;
+  color: white;
+  margin: 0 16px;
+}
+
+.about-container {
+  margin: 0 16px;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.about__title {
+  font-size: 24px;
+  margin-top: 32px;
+  margin-bottom: 24px;
+}
+.about__figure {
+  width: 288px;
+  height: 145px;
+  margin-bottom: 24px;
+}
+.about__figure--img {
+  width: 100%;
+  height: 100%;
+}
+.about__quote {
+  width: 288px;
+  margin-bottom: 32px;
+}
+.about__quote--author {
+  margin-bottom: 40px;
+}
+
+.about-band {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+.about-band__text {
+  margin-top: 24px;
+}
+
+.gallery-container {
+  margin: 0 16px 0 16px;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.gallery__title {
+  margin: 32px 0 24px 0;
+}
+.gallery__figure {
+  width: 288px;
+  margin-bottom: 16px;
+}
+.gallery__figure--img {
+  width: 100%;
+}
+
+.footer-container {
+  background-color: #323232;
+}
+
+.footer {
+  margin: 0 16px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.footer__title {
+  color: white;
+  margin: 40px 0 24px 0;
+}
+.footer__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.footer__link {
+  margin: 0px 8px;
+  list-style: none;
+}
+.footer__link--hide {
+  text-decoration: none;
+  color: white;
+  display: none;
+}
+
+.footer-info {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 24px 16px 0 16px;
+}
+.footer-info .footer-members__title {
+  color: white;
+}
+.footer-info .footer-members__address {
+  margin: 24px 0;
+  color: white;
+}
+
+.footer-copyright {
+  color: white;
+  margin-bottom: 40px;
 }/*# sourceMappingURL=main.css.map */
