--- a/sprint-one/styles/main.scss
+++ b/sprint-one/styles/main.scss
@@ -2,3 +2,157 @@
 @import 'partials/partials';
 // FONTLIST.
 @include font-list;
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: 'Avenir Next';
+  width: 100%;
+}
+// ***NAVBAR***
+.navbar {
+  @include height($height: 80px);
+  @include flex(flex, column, wrap);
+  background-color: $navigation-background-fill;
+  list-style: none;
+  // justify-content: space-around;
+  text-align: center;
+  a {
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+  }
+}
+.navbar-logo {
+  margin: 16px 0;
+  // background-color: red;
+}
+.navbar-list {
+  @include flex(flex, row, wrap);
+  justify-content: space-evenly;
+
+  &__items {
+    @include width($width: 160px);
+    list-style: none;
+  }
+}
+
+// ***HERO***
+.hero {
+  @include flex(flex, row, wrap);
+  @include height($height: 183px);
+  @include width($width: 100%);
+  background-image: linear-gradient(rgba(51, 51, 51, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/Images/hero.jpg);
+  background-size: cover;
+  align-items: center;
+
+  &__title {
+    font-size: 24px;
+    color: white;
+    margin: 0 16px;
+  }
+}
+// ABOUT***
+.about-container {
+  margin: 0 16px;
+}
+.about {
+  @include flex(flex, column, wrap);
+
+  &__title {
+    font-size: 24px;
+    margin-top: 32px;
+    margin-bottom: 24px;
+  }
+  &__figure {
+    @include width($width: 288px);
+    height: 145px;
+    margin-bottom: 24px;
+
+    &--img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  &__quote {
+    width: 288px;
+    margin-bottom: 32px;
+    &--author {
+      margin-bottom: 40px;
+    }
+  }
+}
+.about-band {
+  @include flex(flex, column, wrap);
+  margin-bottom: 40px;
+
+  &__title {
+  }
+  &__text {
+    margin-top: 24px;
+  }
+}
+// IMAGE GALLERY***
+.gallery-container {
+  margin: 0 16px 0 16px;
+}
+.gallery {
+  @include flex(flex, column, wrap);
+
+  &__title {
+    margin: 32px 0 24px 0;
+  }
+  &__figure {
+    width: 288px;
+    margin-bottom: 16px;
+    &--img {
+      width: 100%;
+    }
+  }
+}
+
+.footer-container {
+  background-color: $navigation-background-fill;
+}
+.footer {
+  margin: 0 16px;
+  @include flex(flex, column, wrap);
+
+  &__title {
+    color: white;
+    margin: 40px 0 24px 0;
+  }
+  &__list {
+    @include flex(flex, row, wrap);
+  }
+  &__link {
+    margin: 0px 8px;
+    list-style: none;
+    &--hide {
+      text-decoration: none;
+      color: white;
+      display: none;
+    }
+  }
+}
+.footer-info {
+  @include flex(flex, column, wrap);
+  margin: 24px 16px 0 16px;
+
+  .footer-members {
+    &__title {
+      color: white;
+    }
+    &__address {
+      margin: 24px 0;
+      color: white;
+    }
+  }
+}
+.footer-copyright {
+  color: white;
+  margin-bottom: 40px;
+}
