--- a/sprint-one/styles/main.scss
+++ b/sprint-one/styles/main.scss
@@ -15,19 +15,21 @@ body {
 // ***NAVBAR***
 .navbar {
   @include height($height: 80px);
-  @include flex(flex, column, wrap);
+  display: flex;
+  flex-direction: column;
   background-color: $navigation-background-fill;
   list-style: none;
-  // justify-content: space-around;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   a {
+    @include h3-subheader;
     text-decoration: none;
     color: white;
-    font-size: 14px;
   }
 }
 .navbar-logo {
-  margin: 16px 0;
+  margin-bottom: 16px;
   // background-color: red;
 }
 .navbar-list {
@@ -50,7 +52,7 @@ body {
   align-items: center;
 
   &__title {
-    font-size: 24px;
+    @include h1-hero;
     color: white;
     margin: 0 16px;
   }
@@ -61,15 +63,16 @@ body {
 }
 .about {
   @include flex(flex, column, wrap);
+  font-weight: 600;
 
   &__title {
-    font-size: 24px;
+    @include h1-header;
     margin-top: 32px;
     margin-bottom: 24px;
   }
   &__figure {
-    @include width($width: 288px);
-    height: 145px;
+    @include width($min: 288px, $width: 100%);
+    height: 50vw;
     margin-bottom: 24px;
 
     &--img {
@@ -78,10 +81,14 @@ body {
     }
   }
   &__quote {
-    width: 288px;
+    @include h4-paragraph;
+    @include width($min: 288px, $width: 100%);
     margin-bottom: 32px;
+    // font-family: 'Avenir Next';
+
     &--author {
       margin-bottom: 40px;
+      @include h4-paragraph;
     }
   }
 }
@@ -90,8 +97,10 @@ body {
   margin-bottom: 40px;
 
   &__title {
+    @include h3-subheader;
   }
   &__text {
+    @include h4-paragraph;
     margin-top: 24px;
   }
 }
@@ -103,10 +112,12 @@ body {
   @include flex(flex, column, wrap);
 
   &__title {
+    @include h2-header;
     margin: 32px 0 24px 0;
   }
   &__figure {
-    width: 288px;
+    min-width: 288px;
+    width: 100%;
     margin-bottom: 16px;
     &--img {
       width: 100%;
@@ -122,6 +133,8 @@ body {
   @include flex(flex, column, wrap);
 
   &__title {
+    @include h1-header;
+    font-weight: 700;
     color: white;
     margin: 40px 0 24px 0;
   }
@@ -145,14 +158,17 @@ body {
   .footer-members {
     &__title {
       color: white;
+      @include h4-list-contact;
     }
     &__address {
       margin: 24px 0;
       color: white;
+      @include h4-paragraph;
     }
   }
 }
 .footer-copyright {
   color: white;
   margin-bottom: 40px;
+  @include h4-paragraph;
 }
